--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nostrdownload</title>
+    <meta name="description" content="Browse and download files from nostr relays. Secure client for nostrsave with NIP-44 decryption." />
+    <title>Nostr File Download</title>
   </head>
   <body>
     <div id="root"></div>
