--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/nostrfetch.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Browse and download files from nostr relays. Secure client for nostrsave with NIP-44 decryption." />
-    <title>Nostr File Download</title>
+    <title>Nostr Fetch</title>
   </head>
   <body>
     <div id="root"></div>
